--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,11 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
+    //lifesycle
+    implementation "android.arch.lifecycle:extensions:1.1.1"
+    kapt "android.arch.lifecycle:compiler:1.1.1"
+
+
     // Navigation Component
     implementation "androidx.navigation:navigation-fragment-ktx:2.3.5"
     implementation "androidx.navigation:navigation-ui-ktx:2.3.5"
@@ -68,6 +73,10 @@ dependencies {
     // Retrofit + GSON
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+
+    //okhttp
+    implementation "com.squareup.okhttp3:okhttp:4.9.0"
+    implementation "com.squareup.okhttp3:logging-interceptor:4.9.0"
 
     // Glide
     implementation "com.github.bumptech.glide:glide:4.12.0"
@@ -99,6 +108,7 @@ dependencies {
 
     // Architectural Components
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
 
     //crash reporter
     implementation 'com.balsikandar.android:crashreporter:1.1.0'
@@ -119,6 +129,8 @@ dependencies {
     implementation 'com.chaos.view:pinview:1.4.4'
 
 
+    //chart
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
 
 }
