order statistics added private info added

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -132,6 +132,9 @@ dependencies {
     //chart
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
+    //curved imageview
+    implementation 'com.rishabhharit.roundedimageview:RoundedImageView:0.8.4'
+
 
 }
 
