--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,8 +14,8 @@ android {
         applicationId "uz.techie.mahsulot"
         minSdk 21
         targetSdk 30
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName '1.0.2'
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -139,6 +139,10 @@ dependencies {
     implementation 'com.daasuu:CountAnimationTextView:0.1.2'
 
     implementation "com.github.YvesCheung.RollingText:RollingText:1.2.10"
+
+    //progressbar
+    implementation 'com.github.ybq:Android-SpinKit:1.4.0'
+
 
 
 }
